// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreGraph renders correctly when grade is A and score rate is 67 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 67%;
  height: 50%;
  background-color: #2185D0;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #2185D0;
  position: absolute;
  z-index: 10;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#2185D0"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`ScoreGraph renders correctly when grade is AA and score rate is 78 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 78%;
  height: 50%;
  background-color: #B5CC18;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #2185D0;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #2185D0;
  position: absolute;
  z-index: 10;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#B5CC18"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`ScoreGraph renders correctly when grade is AAA and score rate is 89 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 89%;
  height: 50%;
  background-color: #F2711C;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #2185D0;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #2185D0;
  position: absolute;
  z-index: 10;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #2185D0;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#F2711C"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`ScoreGraph renders correctly when grade is B and score rate is 56 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 56%;
  height: 50%;
  background-color: #1B1C1D;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#1B1C1D"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`ScoreGraph renders correctly when grade is C and score rate is 45 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 45%;
  height: 50%;
  background-color: #1B1C1D;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#1B1C1D"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`ScoreGraph renders correctly when grade is D and score rate is 34 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 34%;
  height: 50%;
  background-color: #1B1C1D;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#1B1C1D"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`ScoreGraph renders correctly when grade is E and score rate is 23 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 23%;
  height: 50%;
  background-color: #1B1C1D;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#1B1C1D"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`ScoreGraph renders correctly when grade is F and score rate is 12 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 12%;
  height: 50%;
  background-color: #1B1C1D;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#1B1C1D"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`ScoreGraph renders correctly when grade is MAX and score rate is 100 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 100%;
  height: 50%;
  background-color: #DB2828;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #2185D0;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #2185D0;
  position: absolute;
  z-index: 10;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #2185D0;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#DB2828"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`ScoreGraph renders correctly when grade is null and score rate is 0 1`] = `
.c0 {
  position: relative;
  width: 100%;
  height: 1.5em;
}

.c1 {
  width: 0%;
  height: 50%;
  background-color: #1B1C1D;
  position: absolute;
  vertical-align: middle;
  top: 25%;
  z-index: 0;
}

.c5 {
  width: 88.88888888888889%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c4 {
  width: 77.77777777777779%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c3 {
  width: 66.66666666666666%;
  height: 100%;
  border-right: 1px dotted #767676;
  position: absolute;
  z-index: 10;
}

.c2 {
  width: 100%;
  height: 100%;
  border-right: 1px solid #767676;
  position: absolute;
  z-index: 10;
  border-left: 1px solid #767676;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#1B1C1D"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;
